Adjusted line height, fixed partup header title alignment

--- a/app/client/stylesheets/components/pu-partupheader.sass
+++ b/app/client/stylesheets/components/pu-partupheader.sass
@@ -7,7 +7,7 @@
 
     h1
         position: absolute
-        bottom: 40px
+        bottom: 40px - 9px
         left: 40px
         right: 40px
         font-family: $font-secondary
