--- a/app/client/stylesheets/defaults/typography.sass
+++ b/app/client/stylesheets/defaults/typography.sass
@@ -8,9 +8,11 @@ h1, h2, h3, h4, h5, h6
 
 h1
     font-size: 28px
+    line-height: 1.4em
 
 h2
     font-size: 22px
+    line-height: 1.4em
 
 p
     line-height: 1.6em
